# thinking-on-the-move

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
data/synthetic/: build_toy.py  toy_inference_records.jsonl  toy_personas.jsonl  toy_pois.csv  toy_train.jsonl  toy_val.jsonl  toy_visits.csv
docs/: data_sources.md  methodology.md  reproducing_poster.md
figures/counterfactual/brooklyn_pantry/: cluster_redistribution_Brooklyn_Pantry_and_Coffee_Shop.csv  redistribution_Brooklyn_Pantry_and_Coffee_Shop.csv  report_Brooklyn_Pantry_and_Coffee_Shop.txt
models/dtbk-lora/: README.md
models/nyc-lora/: README.md
notebooks/: 01_pipeline_overview.ipynb  02_dtbk_walkthrough.ipynb  03_nyc_scaling.ipynb  04_counterfactual_demo.ipynb  _make_notebooks.py
results/: counterfactual_brooklyn_pantry.json  dtbk_metrics.json  nyc_metrics.json
scripts/: auto_submit_polygon_sensitivity.sh  make_poster_scatter.py  make_poster_spatial_map.py  reproduce_poster_figures.sh  run_experiment.sh
src/tom/: __init__.py  utils.py
src/tom/ablations/: __init__.py  cuisine_slice.py  exp14_figures.py  hybrid_decode.py  hybrid_eval.py  obfuscate_names.py  rare_poi_slice.py  reparse_obfuscated.py  resample_candidates.py  strip_persona.py  tail_slicing.py
src/tom/baselines/: __init__.py  classical.py  compare.py
src/tom/core/: __init__.py  data_prep.py  infer_vllm.py  prepare_synthetic_unseen.py  train_lora.py
src/tom/data_pipeline/: __init__.py  bridge_wpp_globalplaces.py  build_polygon_index.py  demographics_clustering.py  download_acs.py  download_wpp.py  extract_global_places.py  match_stops.py  resolve_poi_names.py
src/tom/dtbk/: __init__.py  analysis_supplement.py  build_infer_records.py  compute_pearson_llama_v2.py  compute_pearson_lora.py  extra_metrics.py  inspect_top1s.py  plot_cluster_demographics.py  unified_table.py
src/tom/visualize/: __init__.py  scatter_4panel.py  temporal_eval.py  visualize_map.py
